# nlp-cuda

./: .Rapp.history  .Rhistory  .gitignore  CMakeLists.txt  test.cpp  transpose.cu  utils.h
config/: .bash_profile  .vimrc  cuda.vim
dtm/: CMakeLists.txt  DocumentTermMatrix.cpp  DocumentTermMatrix.h  Indexer.cpp  Indexer.h  main.cpp
examples_core_c/cblas/: cblas.lst  makefile
examples_core_c/cblas/source/: cblas_caxpbyx.c  cblas_caxpyix.c  cblas_caxpyx.c  cblas_ccopyx.c  cblas_cdotc_subx.c  cblas_cdotci_subx.c  cblas_cdotu_subx.c  cblas_cdotui_subx.c  cblas_cgbmvx.c  cblas_cgemm3mx.c  cblas_cgemmx.c  cblas_cgemvx.c  cblas_cgercx.c  cblas_cgerux.c  cblas_cgthrx.c  cblas_cgthrzx.c  cblas_chbmvx.c  cblas_chemmx.c  cblas_chemvx.c  cblas_cher2kx.c  cblas_cher2x.c  cblas_cherkx.c  cblas_cherx.c  cblas_chpmvx.c  cblas_chpr2x.c  cblas_chprx.c  cblas_crotgx.c  cblas_cscalx.c  cblas_csctrx.c  cblas_csrotx.c  cblas_csscalx.c  cblas_cswapx.c  cblas_csymmx.c  cblas_csyr2kx.c  cblas_csyrkx.c  cblas_ctbmvx.c  cblas_ctbsvx.c  cblas_ctpmvx.c  cblas_ctpsvx.c  cblas_ctrmmx.c  (+140 more)
examples_core_c/datafittingc/: datafitting.lst  makefile
examples_core_c/datafittingc/source/: dfdakimacubicspline.c  dfdbesselcubicspline.c  dfdbinsearch.c  dfdcubicspline_interp.c  dfdcubicsplineint2der.c  dfdfifthorderspline_interp.c  dfdhermitecubicspline.c  dfdinterpusercells.c  dfdlinearspline.c  dfdlookup_interp.c  dfdnaturalcubicspline.c  dfdquadraticspline.c  dfdquerytaskstructure.c  dfdstepwise_interp.c  dfdsubbotinquadspline.c  dfsakimacubicspline.c  dfsbesselcubicspline.c  dfsbinsearch.c  dfscubicspline_interp.c  dfscubicsplineint2der.c  dfsfifthorderspline_interp.c  dfshermitecubicspline.c  dfsinterpusercells.c  dfslinearspline.c  dfslookup_interp.c  dfsnaturalcubicspline.c  dfsquadraticspline.c  dfsquerytaskstructure.c  dfsstepwise_interp.c  dfssubbotinquadspline.c  errcheck.inc  generatedata.inc  rescheck.inc
examples_core_c/dftc/: dftc.lst  makefile  readme.txt
examples_core_c/dftc/source/: basic_dp_complex_dft_1d.c  basic_dp_complex_dft_2d.c  basic_dp_complex_dft_3d.c  basic_dp_real_dft_1d.c  basic_dp_real_dft_2d.c  basic_dp_real_dft_3d.c  basic_sp_complex_dft_1d.c  basic_sp_complex_dft_2d.c  basic_sp_complex_dft_3d.c  basic_sp_real_dft_1d.c  basic_sp_real_dft_2d.c  basic_sp_real_dft_3d.c  config_complex_storage.c  config_conjugate_even_storage.c  config_dump_descriptor.c  config_number_of_transforms.c  config_number_of_user_threads.c  config_placement.c  config_scale.c  config_thread_limit.c  copy_descriptor.c  error_processing.c
examples_core_c/fftw2xc/: fftw2xc.lst  makefile
examples_core_c/fftw2xc/source/: complex_1d_ex1.c  complex_1d_ex11.c  complex_1d_ex2.c  complex_1d_ex3.c  complex_1d_ex4.c  complex_1d_ex5.c  complex_1d_ex6.c  complex_1d_ex7.c  complex_1d_ex8.c  complex_1d_ex9.c  complex_2d_ex1.c  complex_2d_ex10.c  complex_2d_ex11.c  complex_2d_ex12.c  complex_2d_ex13.c  complex_2d_ex15.c  complex_2d_ex2.c  complex_2d_ex3.c  complex_2d_ex4.c  complex_2d_ex5.c  complex_2d_ex6.c  complex_2d_ex7.c  complex_2d_ex8.c  (+43 more)
examples_core_c/fftw3xc/: fftw3xc.lst  makefile  readme.txt
examples_core_c/lapacke/: lapacke.lst  makefile
examples_core_c/pdepoissonc/: makefile  pdepoissonc.lst
examples_core_c/pdettc/: makefile  pdettc.lst
examples_core_c/serv_sdli/: makefile
examples_core_c/servicefuncsc/: makefile
examples_core_c/solverc/: makefile  solverc.lst
examples_core_c/solvers_eec/: makefile  solvers_eec.lst
examples_core_c/spblasc/: makefile  spblasc.lst
examples_core_c/transc/: makefile  trans.lst
examples_core_c/versionqueryc/: makefile
examples_core_c/vmlc/: makefile  vml.lst
examples_core_c/vslc/: makefile  vsl.lst
gmm/: CMakeLists.txt  Gmm.cu  Matrix.h  NativeLibrary.h  main.cpp  predefined.h
src/R/: CMakeLists.txt  FindR.cmake  Rutils.cpp  Rutils.h  distR.cpp  dtmR.cpp  gmmR.cpp  kdtreeR.cpp  kmeansR.cpp  knnR.cpp  quadtreeR.cpp  test  test.cpp  tsneR.cpp
src/R/R-package/: DESCRIPTION  NAMESPACE  README.md
src/R/R-package/R/: bash.R  cluster.R  crawler.R  dist.R  dtm.R  knn.R  onLoad.R  plot.R  quadtree.R  sbopt.R  tsne.R  tsne.result.1.tsv
src/R/R-package/data/: spam.sms.RData
src/R/R-package/man/: gp.Rd
src/R/R-package/vignettes/: gp.Rmd  gp.html
src/ds/: CMakeLists.txt  ConcurrentIndexer.h  DocumentTermMatrix.h  Indexer.h  README  SizeFixedHeap.h  io.h  main.cpp
src/gmm/: CMakeLists.txt  DiagNormalPDF.h  README.md  back.txt  gmm.cu  gmm.h  main.cpp  main.cu  test-gmm.cu
src/java/: CMakeLists.txt  CuDenseExprJ.cu  CuDenseMatrixJ.cu  jni_cuda_CuMatrix.cu  jni_cuda_CuMatrix.h  main.cpp  main.cu
src/kmeans/: .main.cpp.swp  CMakeLists.txt  README  kmeans.cu  kmeans.h  main.cpp  main.cu  p
src/knn/: CMakeLists.txt  VpTree.h  VpTreeX.h  knn.h  main.cpp
src/lib/: CudaUtils.cu  Indexer.h  Tokenizer.h  Transpose.cu  device_matrix.h  matrix.h
src/matrix/: CDenseMatrix.h  CMakeLists.txt  CuBlasUtils.cu  CuDenseExpr.cu  CuDenseMatrix.cu  CuDenseMatrixHeader.cu  CuMatrix.h  CuSparseExpr.cu  CuSparseMatrix.cu  CuSparseMatrix.h  CuSparseMatrixHeader.cu  DenseExpr.h  DenseMatrix.h  DenseVector.h  DocumentTermMatrix.h  RDenseMatrix.h  SparseExpr.h  SparseMatrix.h  SparseVector.h  Vector.h  cspblas_ccsr.cpp  cufunctors.cu  functors.h  main.cpp  main.cu  matrix.h  p
src/optimizer/: Adam.h  CMakeLists.txt  KLObjective.h  Optimizer.h  main.cpp
src/test/: #testMain.cpp#  CMakeLists.txt  Matrix.h.bak  TestCPP.cpp  TestMatrix.cu  TestReduce.cu  TestScan.cu  TestTBB.cpp  TestTokenizer.cpp  TestTranspose.cu  a.h  blaze.cpp  eigen.cpp  kdtree.cpp  main.cpp  omp  p  p.cpp  q.cpp  quadtree.cpp  t.cu  test  test.cpp  test.cuh  test.h  testMain.cpp  testOpenMP.cpp
src/test/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
src/tsne/: CMakeLists.txt  README  main.cpp  main.cu  quadtree.h  tsne.cpp  tsne.cu  tsne.h
src/util/: Array.h  Counter.h  CpuTimer.h  CudaUtils.cu  DocumentTermMatrix.h  common_headers.h  cu_common_headers.cu  cuda_common_headers.cu  document_term_matrix.h  expression_templates.h  matrix.h
src/utils/: cutils.cu  utils.cpp  utils.h
(+655 files in other folders)
